--- a/Live Online Chat System/index.html
+++ b/Live Online Chat System/index.html
@@ -4,16 +4,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Socket.IO Chat</title>
+  <title>Susthiti Open Live Chat</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
-  <h1 class="text-center mb-4 position-fixed bg-light" style="z-index: 9; width: 100%;">Community | Live Online Chat
-    System</h1>
+  <span class="text-center mb-4 position-fixed bg-light p-3" style="z-index: 9; width: 100%;">
+    <h3 class="m-0 p-0"> <img src="https://raw.githubusercontent.com/aakashstha1/Susthiti/main/Logo.png" alt="" style="width: 150px;"> Community | Open Live Online Chat
+    System</h3>
+    <span> All Users Here are anonymous! We respect privacy & Care Mental Well-being.  </span>
+</span>
   <div class="container-fluid">
+    <br>
+    <br>
     <br>
     <div class="row justify-content-center mt-5">
       <div class="col-lg-8 col-md-10 col-sm-12">
@@ -27,14 +32,14 @@
     </div>
   </div>
 
-  <footer class="fixed-bottom bg-light mb-1">
+  <footer class="fixed-bottom bg-light mb-0">
 
     <div class="container">
-      <form id="form" class="d-flex align-items-center mt-1">
+      <form id="form" class="d-flex align-items-center mt-2 p-2">
         <span class="username font-weight-bold mr-3" id="username"></span>
         <input id="input" class="form-control ms-3" autocomplete="off" placeholder="Type your message..." />
         &nbsp;
-        <button type="submit" class="btn btn-dark">Send</button>
+        <button type="submit" class="btn btn-success">Send</button>
       </form>
     </div>
 
